# mint-atlas

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/samples/: athens_owl.json  seleucid_antioch.json
docs/: METHODOLOGY.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: GraphView.tsx
mint_atlas/: __init__.py  cli.py
mint_atlas/api/: main.py
mint_atlas/data/: __init__.py  datasets.py  synthetic.py
mint_atlas/graph/: __init__.py  builder.py  die_link.py  temporal.py
mint_atlas/inference/: __init__.py  classical.py  pipeline.py
mint_atlas/models/: __init__.py  gnn_temporal.py  layers.py
scripts/: deploy_hf.bat  deploy_hf.py  deploy_local_tunnel.bat  docker_entrypoint.sh  train.py
tests/: test_api.py  test_classical.py  test_gnn.py  test_graph.py
