[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mint-atlas"
version = "0.1.0"
description = "AI-driven ancient mint die-link network reconstruction using Graph Neural Networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mint Atlas Contributors" }]
keywords = ["gnn", "numismatics", "die-link", "archaeology", "graph-neural-networks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
mint-atlas = "mint_atlas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["mint_atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
